- (09/10/04) Bug fixing.

CPE:
- (09/08/04) Introducing 'CPE_ST' to force single thread configuration even if the compiler is set to multithreading.
- (28/08/04) Adding Console/GUI detection (with wxWidgets).

CTN:
- Adding a 'FlushTest()' to '=' operator in debug mode.
- (23/04/04) Adding a test in debug mode to avoid retrieving of an undefined item.
- (10/05/04) Fixing 'Delete()' bug.

DTE:
- (15/04/04) Introducing the new structure.
- (21/07/04) Improving some features about the thread-safeness of this library.
- (31/07/04) Adding the 'GetSimplifiedRawDate()' function.
- (09/08/04) Fixing sign bug.
- (14/09/04) Some improvements.

DTFPTB:
- (13/10/04) Correcting misspelled function name (PutSShort -> PutSLong).

EPEIOS:
- (15/06/04) Adding some useful constants.
- (26/09/04) Adding 'EPEIOS_ROW_MAX'.

EPSMSC:
- Adding 'EPSMSC_COPYRIGHT()' macro.

ERR:
- Adding some minor features for the 'Intentional' error type.
- (24/05/04) Using the 'CIO' library instead of 'STF'.
- (28/08/04) No more use of the 'CIO' library when in GUI enviroment.
- (03/09/04) Adding some facilities.
- (06/09/04) Adding some other facilities.

FLW:
- (24/05/04) Removing the a tailing '_' to the object name.
- (17/07/04) Adding amount of data red/written handling.
-			 Renaming some methods.
- (20/07/04) Improvements.
- (31/07/04) Fixing bug concerning the 'Reset()' function.

FLX:
- (31/07/04) The 'bunch_(i|o)flow__' now works with all type of bunch.
- (01/08/04) Correcting little error.

HTP:
- (18/07/04) little improvements.

IDXQUE:
- (16/09/04) Using the core queue and no more the manage queue, to fit with 'IDXBTR'.

IDXBTQ:
- (15/09/04) Adapting to changes in 'IDXBTR'.
- (16/09/04) Adapting to changes in 'IDXBTR'.
- (17/09/04) Removing obsolete method.
-			 Adding E_ISEEKER(t)__

IDXBTR
- Fixing bug in the 'tree_index_::Remove()' function.
- (15/09/04) The root is no more stored in the index, so an index can, in fact, contains several indexes.