@@ -1,1 +1,3 @@
->$TEXT$<	>$FILE$<	>$_DATE_$ $_TIME_$<
+>$TEXT$<	>$FILE$<
+	>$_DATE_$ $_TIME_$<
+	-------------------------------------
